fixed the installer for the windows service

--- a/src/Lighthouse.Service/Lighthouse.Service.csproj
+++ b/src/Lighthouse.Service/Lighthouse.Service.csproj
@@ -78,11 +78,11 @@
       <DependentUpon>LighthouseService.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="LighthouseServiceInstaller.cs">
+    <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="LighthouseServiceInstaller.Designer.cs">
-      <DependentUpon>LighthouseServiceInstaller.cs</DependentUpon>
+    <Compile Include="ProjectInstaller.Designer.cs">
+      <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -97,8 +97,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="LighthouseServiceInstaller.resx">
-      <DependentUpon>LighthouseServiceInstaller.cs</DependentUpon>
+    <EmbeddedResource Include="ProjectInstaller.resx">
+      <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
