--- a/src/Lighthouse.Service/App.config
+++ b/src/Lighthouse.Service/App.config
@@ -34,8 +34,7 @@
             
             cluster {
               #will inject this node as a self-seed node at run-time
-              seed-nodes = [
-                               "akka.tcp://lighthouse@127.0.0.1:4044"]
+              seed-nodes = ["akka.tcp://lighthouse@127.0.0.1:4053", "akka.tcp://lighthouse@127.0.0.1:4044"]
               roles = [lighthouse]
               auto-down-unreachable-after = 10s
             }
