--- a/src/Lighthouse/App.config
+++ b/src/Lighthouse/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
@@ -32,9 +32,11 @@
               }
             }            
             
+            loggers = ["Akka.Logger.NLog.NLogLogger,Akka.Logger.NLog"]
+            
             cluster {
               #will inject this node as a self-seed node at run-time
-              seed-nodes = ["akka.tcp://lighthouse@127.0.0.1:4053", "akka.tcp://lighthouse@127.0.0.1:4044"]
+              seed-nodes = [] #manually populate other seed nodes here, i.e. "akka.tcp://lighthouse@127.0.0.1:4053", "akka.tcp://lighthouse@127.0.0.1:4044"
               roles = [lighthouse]
               auto-down-unreachable-after = 10s
             }
@@ -42,4 +44,12 @@
       ]]>
     </hocon>
   </akka>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
