--- a/src/Lighthouse/NLog.config
+++ b/src/Lighthouse/NLog.config
@@ -3,11 +3,11 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <targets>
     <target name="eventlog" xsi:type="EventLog" layout="${logger}: ${message}" source="Lighthouse" log="Application" />
-    <target name="console" xsi:type="ColoredConsole" layout="${date:format=HH\:MM\:ss} ${logger} ${message}"></target>
+    <target name="console" xsi:type="ColoredConsole" layout="${logger}: ${message}"></target>
   </targets>
 
   <rules>
-    <!--<logger name="*" minlevel="Warn" writeTo="eventlog" />-->
-    <logger name="*" minlevel="Debug" writeTo="console" />
+    <logger name="*" minlevel="Warn" writeTo="eventlog" />
+    <logger name="*" minlevel="Info" writeTo="console" />
   </rules>
 </nlog>
