--- a/src/Lighthouse/packages.config
+++ b/src/Lighthouse/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.0" targetFramework="net45" />
-  <package id="Akka.Cluster" version="1.0.0-pre1504092226" targetFramework="net45" />
-  <package id="Akka.Logger.NLog" version="1.0.0" targetFramework="net45" />
-  <package id="Akka.Remote" version="1.0.0" targetFramework="net45" />
+  <package id="Akka" version="1.0.2" targetFramework="net45" />
+  <package id="Akka.Cluster" version="1.0.2.9-beta" targetFramework="net45" />
+  <package id="Akka.Logger.NLog" version="1.0.2" targetFramework="net45" />
+  <package id="Akka.Remote" version="1.0.2" targetFramework="net45" />
   <package id="Google.ProtocolBuffers" version="2.4.1.521" targetFramework="net45" />
   <package id="Helios" version="1.4.0" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net45" />
