--- a/src/Lighthouse/App.config
+++ b/src/Lighthouse/App.config
@@ -10,18 +10,17 @@
 		<hocon>
 			<![CDATA[
 					lighthouse{
-							actorsystem: "lighthouse" #POPULATE NAME OF YOUR ACTOR SYSTEM HERE
+							actorsystem: "webcrawler" #POPULATE NAME OF YOUR ACTOR SYSTEM HERE
 						}
 			
 					akka {
-						actor {
+						actor { 
 							provider = "Akka.Cluster.ClusterActorRefProvider, Akka.Cluster"
 						}
 						
 						remote {
 							log-remote-lifecycle-events = DEBUG
-							
-							helios.tcp {
+%							helios.tcp {
 								transport-class = "Akka.Remote.Transport.Helios.HeliosTcpTransport, Akka.Remote"
 								applied-adapters = []
 								transport-protocol = tcp
@@ -38,7 +37,6 @@
 							#will inject this node as a self-seed node at run-time
 							seed-nodes = [] #manually populate other seed nodes here, i.e. "akka.tcp://lighthouse@127.0.0.1:4053", "akka.tcp://lighthouse@127.0.0.1:4044"
 							roles = [lighthouse]
-							auto-down-unreachable-after = 10s
 						}
 					}
 			]]>
