Include exception details in nlog output

--- a/src/Lighthouse/NLog.config
+++ b/src/Lighthouse/NLog.config
@@ -2,8 +2,8 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <targets>
-    <target name="eventlog" xsi:type="EventLog" layout="${logger}: ${message}" source="Lighthouse" log="Application" />
-    <target name="console" xsi:type="ColoredConsole" layout="${logger}: ${message}"></target>
+    <target name="eventlog" xsi:type="EventLog" layout="${logger}: ${message}${exception:format=tostring}" source="Lighthouse" log="Application" />
+    <target name="console" xsi:type="ColoredConsole" layout="${logger}: ${message}${exception:format=tostring}"></target>
   </targets>
 
   <rules>
