upgraded to Akka.NET v1.0.6

--- a/src/Lighthouse/App.config
+++ b/src/Lighthouse/App.config
@@ -10,7 +10,7 @@
 		<hocon>
 			<![CDATA[
 					lighthouse{
-							actorsystem: "lighthouse" #POPULATE NAME OF YOUR ACTOR SYSTEM HERE
+							actorsystem: "webcrawler" #POPULATE NAME OF YOUR ACTOR SYSTEM HERE
 						}
 			
 					akka {
