added wire serializer and config
added wire serializer and config

--- a/src/Lighthouse/App.config
+++ b/src/Lighthouse/App.config
@@ -10,11 +10,15 @@
 		<hocon>
 			<![CDATA[
 					lighthouse{
-							actorsystem: "webcrawler" #POPULATE NAME OF YOUR ACTOR SYSTEM HERE
+							#actorsystem: "ClusterSystem" #POPULATE NAME OF YOUR ACTOR SYSTEM HERE
+              actorsystem: "ILServiceCluster" #POPULATE NAME OF YOUR ACTOR SYSTEM HERE
 						}
 			
 					akka {
 						actor { 
+              serializers {
+                wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
+              }
 							provider = "Akka.Cluster.ClusterActorRefProvider, Akka.Cluster"
 						}
 						
@@ -25,9 +29,9 @@
 								applied-adapters = []
 								transport-protocol = tcp
 								#will be populated with a dynamic host-name at runtime if left uncommented
-								#public-hostname = "POPULATE STATIC IP HERE"
-								hostname = "0.0.0.0"
-								port = 4053
+								public-hostname = "127.0.0.1"
+                tname = "127.0.0.1"
+                port = 4053
 							}
 						}            
 						
