added a service for self-discovery of cluster nodes called WhatsMyIPService.  added Docker support and lightweight build script.

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ bld/
 [Bb]in/
 [Oo]bj/
 
+# Visual Studio 2015 cache/options directory
+.vs/
+
 # Roslyn cache directories
 *.ide/
 
@@ -204,3 +207,7 @@ FakesAssemblies/
 /src/.Akka.boltdata/NCover/Projects/Name/0.jf
 /src/.Akka.boltdata/Settings.json
 /src/.Akka.boltdata/TestResults.json
+
+# Tools
+tools
+.fake
