--- a/src/Lighthouse/App.config
+++ b/src/Lighthouse/App.config
@@ -20,13 +20,13 @@
 						
 						remote {
 							log-remote-lifecycle-events = DEBUG
-							helios.tcp {
-								transport-class = "Akka.Remote.Transport.Helios.HeliosTcpTransport, Akka.Remote"
+							dot-netty.tcp {
+								transport-class = "Akka.Remote.Transport.DotNetty.TcpTransport, Akka.Remote"
 								applied-adapters = []
 								transport-protocol = tcp
 								#will be populated with a dynamic host-name at runtime if left uncommented
-								#public-hostname = "POPULATE STATIC IP HERE"
-								hostname = "0.0.0.0"
+								public-hostname = "172.22.144.2"
+								#hostname = "0.0.0.0"
 								port = 4053
 							}
 						}            
