--- a/src/Lighthouse.Tests/Lighthouse.Tests.csproj
+++ b/src/Lighthouse.Tests/Lighthouse.Tests.csproj
@@ -48,6 +48,12 @@
     </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,9 +84,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lighthouse.WhatsMyIP\Lighthouse.WhatsMyIP.csproj">
-      <Project>{ac05a11c-65e9-4dfd-8635-6b2ae1f7d193}</Project>
-      <Name>Lighthouse.WhatsMyIP</Name>
+    <ProjectReference Include="..\Lighthouse\Lighthouse.csproj">
+      <Project>{87be1abf-1f59-41ab-a3cb-4b1e7e0b218a}</Project>
+      <Name>Lighthouse</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
