--- a/src/ClusterBootstrapper.Lighthouse.Tests/packages.config
+++ b/src/ClusterBootstrapper.Lighthouse.Tests/packages.config
@@ -3,8 +3,16 @@
   <package id="Akka" version="1.2.0" targetFramework="net452" />
   <package id="Castle.Core" version="4.0.0" targetFramework="net452" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="2.0.2" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net452" />
   <package id="Moq" version="4.7.9" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net452" />
   <package id="xunit" version="2.2.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net452" />
