--- a/src/Lighthouse.Tests/packages.config
+++ b/src/Lighthouse.Tests/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Akka" version="1.2.0" targetFramework="net452" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net452" />
   <package id="xunit" version="2.2.0" targetFramework="net452" />
