--- a/src/Lighthouse/packages.config
+++ b/src/Lighthouse/packages.config
@@ -6,18 +6,26 @@
   <package id="Akka.Remote" version="1.2.0" targetFramework="net45" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net45" />
   <package id="Helios" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.0.2" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="NLog" version="4.3.2" targetFramework="net45" />
-  <package id="System.Collections" version="4.0.0" targetFramework="net45" />
-  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
-  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
-  <package id="System.Globalization" version="4.0.0" targetFramework="net45" />
-  <package id="System.Linq" version="4.0.0" targetFramework="net45" />
-  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net45" />
-  <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
-  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
-  <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="NLog" version="4.4.6" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net45" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net45" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net45" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net45" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net45" />
   <package id="Topshelf" version="3.2.0" targetFramework="net45" />
   <package id="Topshelf.NLog" version="3.2.0" targetFramework="net45" />
 </packages>
