Updated to akka 1.2

--- a/src/Lighthouse/App.config
+++ b/src/Lighthouse/App.config
@@ -20,8 +20,8 @@
 						
 						remote {
 							log-remote-lifecycle-events = DEBUG
-							helios.tcp {
-								transport-class = "Akka.Remote.Transport.Helios.HeliosTcpTransport, Akka.Remote"
+							dot-netty.tcp {
+								transport-class = "Akka.Remote.Transport.DotNetty.TcpTransport, Akka.Remote"
 								applied-adapters = []
 								transport-protocol = tcp
 								#will be populated with a dynamic host-name at runtime if left uncommented
