--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,8 @@ TestResults/
 PerfResults/
 *.lock.json
 
-# Visual Studio 2015 cache/options directory
+# Visual Studo 2015 cache/options directory
 .vs/
-
-# Roslyn cache directories
-*.ide/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -192,13 +189,6 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
-/src/.Akka.boltdata/NCover/Executions/0.jf
-/src/.Akka.boltdata/NCover/Executions/ProjectId/0.jf
-/src/.Akka.boltdata/NCover/Executions/ProjectOrderIndex/0.jf
-/src/.Akka.boltdata/NCover/Projects/0.jf
-/src/.Akka.boltdata/NCover/Projects/Name/0.jf
-/src/.Akka.boltdata/Settings.json
-/src/.Akka.boltdata/TestResults.json
 
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
@@ -215,4 +205,3 @@ build/
 .dotnet/
 .idea/.idea.NBench.NetCore/.idea/*
 launchSettings.json
-.fake
