--- a/src/Lighthouse/App.config
+++ b/src/Lighthouse/App.config
@@ -3,9 +3,6 @@
 	<configSections>
 		<section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
 	</configSections>
-  <appSettings>
-    <add key="BaseAddress" value="http://+:9000/" />
-  </appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
 	</startup>
@@ -28,7 +25,7 @@
 								applied-adapters = []
 								transport-protocol = tcp
 								#will be populated with a dynamic host-name at runtime if left uncommented
-								#public-hostname = "172.22.144.2"
+								#public-hostname = "POPULATE STATIC IP HERE"
 								hostname = "0.0.0.0"
 								port = 4053
 							}
@@ -54,10 +51,6 @@
 			<dependentAssembly>
 				<assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-1.2.1.0" newVersion="1.2.1.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
