--- a/src/Lighthouse/Lighthouse.csproj
+++ b/src/Lighthouse/Lighthouse.csproj
@@ -1,9 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\common.props" />
 
-
   <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>net45</TargetFramework>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Akka" Version="1.2.3" />
+    <PackageReference Include="Akka.Cluster" Version="1.2.3" />
+    <PackageReference Include="Akka.Logger.NLog" Version="1.2.0" />
+    <PackageReference Include="Akka.Remote" Version="1.2.3" />
+    <PackageReference Include="Topshelf" Version="3.3.1" />
+    <PackageReference Include="Topshelf.NLog" Version="3.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Configuration" />
+  </ItemGroup>
+  
 </Project>
