--- a/src/Lighthouse.Tests/Lighthouse.Tests.csproj
+++ b/src/Lighthouse.Tests/Lighthouse.Tests.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\common.props" />
 
   <PropertyGroup>    
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>net45</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
