--- a/src/Lighthouse/Lighthouse.csproj
+++ b/src/Lighthouse/Lighthouse.csproj
@@ -11,12 +11,21 @@
     <PackageReference Include="Akka.Cluster" Version="1.2.3" />
     <PackageReference Include="Akka.Logger.NLog" Version="1.2.0" />
     <PackageReference Include="Akka.Remote" Version="1.2.3" />
-    <PackageReference Include="Topshelf" Version="3.3.1" />
-    <PackageReference Include="Topshelf.NLog" Version="3.3.1" />
+    <PackageReference Include="Topshelf" Version="3.2.0" />
+    <PackageReference Include="Topshelf.NLog" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="System.Configuration" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   
 </Project>
