--- a/src/Lighthouse/Dockerfile-windows
+++ b/src/Lighthouse/Dockerfile-windows
@@ -14,10 +14,10 @@ EXPOSE 9110 4053
 
 # Install Petabridge.Cmd client so it can be invoked remotely via
 # Docker or K8s 'exec` commands
-RUN dotnet tool install --global pbm 
+#RUN dotnet tool install --global pbm 
 
 # Needed because https://stackoverflow.com/questions/51977474/install-dotnet-core-tool-dockerfile
-ENV PATH="${PATH}:/root/.dotnet/tools"
+#ENV PATH="${PATH}:/root/.dotnet/tools"
 
 # RUN pbm help
 
