fixing window-release YAML

--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -20,6 +20,7 @@ variables:
   - name: githubRepositoryName
     value: yourOrganization/yourRepo #replace this
 
+- job: publishNetCore
 steps:
 - task: BatchScript@1
   displayName: 'FAKE Build'
@@ -36,3 +37,5 @@ steps:
     releaseNotesFile: 'RELEASE_NOTES.md'
     assets: |
      bin\nuget\*.nupkg
+- deployment:  linuxImageDeploy
+- deployment:  windowsImageDeploy
