Update windows-release.yaml for Azure Pipelines

--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -66,7 +66,7 @@ jobs:
         displayName: "Login to Docker Hub"
         inputs:
           command: login
-          containerRegistry: $(PetabridgeDocker)
+          containerRegistry: $(dockerConnectionName)
       - task: Docker@2
         displayName: Build and Push
         inputs:
@@ -93,7 +93,7 @@ jobs:
         displayName: "Login to Docker Hub"
         inputs:
           command: login
-          containerRegistry: $(PetabridgeDocker)
+          containerRegistry: $(dockerConnectionName)
       - task: Docker@2
         displayName: Build and Push
         inputs:
