Update windows-release.yaml for Azure Pipelines

--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -7,7 +7,7 @@ trigger:
 
 variables:
   - name: githubConnectionName
-    value: petabridge
+    value: releases
   - name: projectName
     value: lighthouse 
   - name: githubRepositoryName
